# AdventOfCode_day4

./: MANIFEST.in  README.md  setup.cfg  setup.py
src/day4/: __init__.py  calculate_winnings.py  file_parser.py  first_challenge.py  second_challenge.py
src/day4/consts/: filenames.py
tests/: file_parser_test.py
