[metadata]
name = AdventOfCode_day4
version = 0.0.0
license = <license name, e.g. MIT>
description = Advent of code day 4 solution
long_description = file: README.rst
author = Alex and Alfie
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pytest

[options.packages.find]
where=src.day4
